--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
     </head>
     
-    <body class="mg-lg mg-md mg-sm"> 
+    <body class="mg-lg mg-md mg-sm" > 
         <div class= "col-lg-2 col-md-2 col-sm-3"> 
             <div class= "box bg" style="width: 100%; 
                                  height: 100px">
@@ -81,12 +81,13 @@
             <p class="subdue">Poster shortlisted in Poster Competition by Mahanagar Gas Limited in 2015</p>
             <p class="subdue">All rounder award from school in 2012</p>
             <p class="subdue">Recipient of scholarship from Centre for Cultural Resources and Training (Government of India) in painting from 2005 to 2011</p>
-        </div><hr class= "col-lg-12 col-md-12 col-sm-12">
-        <div class="col-lg-4 col-md-4 col-sm-6">
+        </div><hr class= "col-lg-12 col-md-12 col-sm-12" >
+        <div class="col-lg-4 col-md-4 col-sm-6" style="padding: 0px 12px 0px 0px">
             <div ><a href= "https://www.behance.net/SitDownMoody" target="_blank"><img src="behance_icon.svg" class="be_li"></a></div><p style=" margin-top: 2px">Visit portfolio on Behance</p>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-6">
+        <div class="col-lg-4 col-md-4 col-sm-6" style="padding: 0px 12px 0px 0px">
             <div><a href="https://www.linkedin.com/in/siddhant-modi-62602053" target="_blank"><img src="linkedin_icon.svg" class="be_li"></a></div><p style=" margin-top: 2px">Visit Linkedin Profile</p>
         </div>
+        <div class= "col-lg-12 col-md-12 col-sm-12" style="height:90px">&nbsp;</div>
     </body>
 </html>
