--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <p class="subdue">Recipient of scholarship from Centre for Cultural Resources and Training (Government of India) in painting from 2005 to 2011</p>
         </div><hr class= "col-lg-12 col-md-12 col-sm-12" >
         <div class="col-lg-4 col-md-4 col-sm-6" style="padding: 0px 12px 0px 0px">
-            <div ><a href= "https://www.behance.net/SitDownMoody" target="_blank"><img src="behance_icon.svg" class="be_li"></a></div><p style=" margin-top: 2px">Visit portfolio on Behance</p>
+            <a href= "https://www.behance.net/SitDownMoody" target="_blank"><div ><img src="behance_icon.svg" class="be_li"></div><p style=" margin-top: 2px">Visit portfolio on Behance</p></a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6" style="padding: 0px 12px 0px 0px">
-            <div><a href="https://www.linkedin.com/in/siddhant-modi-62602053" target="_blank"><img src="linkedin_icon.svg" class="be_li"></a></div><p style=" margin-top: 2px">Visit Linkedin Profile</p>
+            <a href="https://www.linkedin.com/in/siddhant-modi-62602053" target="_blank"><div><img src="linkedin_icon.svg" class="be_li"></div><p style=" margin-top: 2px">Visit Linkedin Profile</p></a>
         </div>
         <div class= "col-lg-12 col-md-12 col-sm-12" style="height:90px">&nbsp;</div>
     </body>
