--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class= "box box col-lg-4 col-md-4 col-sm-12;" style="padding: 0px 12px 0px 0px">
         <p class="hilight">Other skills and software</p>
-            <p class="subdue">Programming in HTML &amp; CSS, Processing (P5), Python (beginner)</p>
+            <p class="subdue">Programming in HTML &amp; CSS, Processing (P5), Basic knowledge of Python</p>
             <p class="subdue">Adobe Illustrator, Photoshop, After Effects, Adobe XD</p>
             <p class="subdue">Typography, Calligraphy, Drawing, Illustration, Good writing skills in English and Hindi</p>
             <p class="hilight">Volunteer work</p>
