--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         </div>
         <div class= "box box col-lg-4 col-md-4 col-sm-12;" style="padding: 0px 12px 0px 0px">
         <p class="hilight">Other skills and software</p>
-            <p class="subdue">Programming in HTML &amp; CSS, Processing (P5), Basic&nbsp;knowledge&nbsp;of&nbsp;Python</p>
-            <p class="subdue">Adobe XD, Illustrator, Photoshop, After Effects </p>
-            <p class="subdue">Typography, Calligraphy, Drawing, Illustration, Good writing skills in English and Hindi</p>
+            <p class="subdue">Programming in HTML &amp; CSS, Processing (P5), Basic knowledge of Python</p>
+            <p class="subdue">Adobe Illustrator, Photoshop, After Effects, XD </p>
+            <p class="subdue">Typography, Calligraphy, Drawing, Illustration, Creative writing in English and Hindi</p>
             <p class="hilight">Volunteer work</p>
             <p class="subdue">Member of Placement Cell at NID</p>
         </div>
